--- a/public/index.html
+++ b/public/index.html
@@ -349,7 +349,7 @@
         <a href="/leaderboard">Challenge Leaders</a>
         <a href="/leagueofwhales">Whales Leaders</a>
 
-      <li class="nav-item dropdown">
+<!--       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Dropdown
         </a>
@@ -360,7 +360,7 @@
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
       </li>
-
+ -->
     </div>
 
     <div class="lookup-container">
