--- a/public/leaderboard/index.html
+++ b/public/leaderboard/index.html
@@ -94,7 +94,8 @@
             }
 
         </style>
-        <title>League of Legends Players</title>
+    <title>League of Legends Challenges Leaderboard=</title>
+    <meta name="keywords" content="league of legends challenges, lol challenges, lol mastery, rank, leaderboard">
         
 
     </head>
