--- a/public/champions/index.html
+++ b/public/champions/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Catchem All Tracker</title>
+    <title>League of Legends Champions Challenge Tracker Tool</title>
+    <meta name="keywords" content="league of legends challenges, lol challenges, lol mastery">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 
