--- a/public/checklist/index.html
+++ b/public/checklist/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Checklist</title>
+    <title>League of Legends Items Challenge Tracker Tool</title>
+    <meta name="keywords" content="league of legends challenges, lol challenges, lol mastery, league of legends items">
   <link rel="stylesheet" href="/style.css">
   <style>
 
