--- a/public/catch/index.html
+++ b/public/catch/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>League of Legends Catchem All Challenge Tracker Tool</title>
     <meta name="keywords" content="league of legends challenges, lol challenges, lol mastery">
+    <meta name="description" content="Mastery Challenge Progress, different tools and tracker for tracking challenge progress. Mastery viewer with mastery related challenges with champion role filters.">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="../style.css">
 
