--- a/public/checklist/index.html
+++ b/public/checklist/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
     <title>League of Legends Items Challenge Tracker Tool</title>
     <meta name="keywords" content="league of legends challenges, lol challenges, lol mastery, league of legends items">
+    <meta name="description" content="Mastery Challenge Progress, different tools and tracker for tracking challenge progress. Mastery viewer with mastery related challenges with champion role filters.">
   <link rel="stylesheet" href="/style.css">
   <style>
 
