--- a/public/champions/index.html
+++ b/public/champions/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
     <title>League of Legends Champions Challenge Tracker Tool</title>
     <meta name="keywords" content="league of legends challenges, lol challenges, lol mastery">
+    <meta name="description" content="Mastery Challenge Progress, different tools and tracker for tracking challenge progress. Mastery viewer with mastery related challenges with champion role filters.">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 
