--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,15 @@
     <meta charset="UTF-8">
     <title>League of Legends Mastery Challenge Tracker Tool</title>
     <meta name="keywords" content="league of legends challenges, lol challenges, lol mastery">
+    <meta name="description" content="Mastery Challenge Progress, different tools and tracker for tracking challenge progress. Mastery viewer with mastery related challenges with champion role filters.">
+
     <meta name="google-site-verification" content="OXsabDJnd6WsF75SeZTpZuxOXeV1qr0FPT0rVbVkJuQ" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <style>
+
+
+
       .lookup-container {
 
         text-align: center;
@@ -21,6 +26,20 @@
         font-size: 0.8em;
         background-color: #111111c4;
       }
+
+      .lookup-container-home {
+        width: 813px;
+        padding: 31px 13px;
+      }
+
+      .lookup-container-home p {
+        color: gold;
+        font-size: 16px;
+        margin-bottom: 30PX;
+        margin-top: 24PX;
+      }
+
+
 
       .lookup-container input {
         border-style: hidden;
@@ -365,10 +384,15 @@
  -->
     </div>
 
-    <div class="lookup-container">
+
+    <div class="lookup-container center-div lookup-container-home" style="display: none;">
         <div style="font-size: 20px; margin-bottom: 10px;"  class="page-title">
           Champion Mastery Viewer
         </div>
+        <p>
+          View your champions' masteries with filtering functionality based on level and role. <br>
+          See your the mastery related challenges progress all in one place.
+        </p>
         <div style="display: none;margin-top: 100px" id="status"></div>
         <div style="align-items: center; display: flex; position: relative;width: 95%;margin: 0 auto;">
 
@@ -397,8 +421,40 @@
     </div>
 
 
+    <div class="lookup-container lookup-container-small" style="display: none">
+        <div style="font-size: 20px; margin-bottom: 10px;"  class="page-title">
+          Champion Mastery Viewer
+        </div>
+        <div style="display: none;margin-top: 100px" id="status"></div>
+        <div style="align-items: center; display: flex; position: relative;width: 95%;margin: 0 auto;">
 
-  <div class="checkbox-container" style="display: flex;">
+            <div style="margin-right: 10px" class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle region-toggle" type="button" data-bs-toggle="dropdown"   aria-expanded="false">
+                NA
+              </button>
+              <div style="min-width: 100px;" class="dropdown-menu region-menu" >
+                <a class="dropdown-item" href="#">NA</a>
+                <a class="dropdown-item" href="#">EUW</a>
+                <a class="dropdown-item" href="#">EUNE</a>
+                <a class="dropdown-item" href="#">BR</a>
+              </div>
+            </div>
+
+
+   
+
+
+            <input id="userName2" placeholder="name#tag"/>
+
+            <i style="position: absolute;left: 95px;font-size: 20px; top: 12px;" class="fa-solid fa-magnifying-glass"></i>
+            <i style="position: absolute;left: 95px;font-size: 20px; top: 12px; display: none" class="fa-solid fa-spinner fa-spin"></i>
+
+        </div>
+    </div>
+
+
+
+  <div class="checkbox-container" style="display: none;">
 
 
 
