--- a/public/leagueofwhales/index.html
+++ b/public/leagueofwhales/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="League of Legends whales leaderboard, show accounts that are most valuable based on RP">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="/style.css">
         <style>
