--- a/public/index.html
+++ b/public/index.html
@@ -391,7 +391,7 @@
         </div>
         <p>
           View your champions' masteries with filtering functionality based on level and role. <br>
-          See your the mastery related challenges progress all in one place.
+          See your mastery related challenges progress all in one place.
         </p>
         <div style="display: none;margin-top: 100px" id="status"></div>
         <div style="align-items: center; display: flex; position: relative;width: 95%;margin: 0 auto;">
