--- a/public/champions/index.html
+++ b/public/champions/index.html
@@ -170,6 +170,49 @@
     }
 
 
+
+@media (max-width: 1000px) {
+
+  .top-section {
+    zoom: .8;
+  }
+
+  .checkbox-container {
+    flex-direction: column;
+    margin: 0;
+  }
+
+  .challenge-selection {
+    order: 1;
+  }
+
+  .right-side {
+    order: 2;
+    width: 100%;
+    border-radius: 0;
+  }
+
+  .text-left.challenge-sides.challenge-selection {
+    width: 100% !important;
+    border-radius: 0;
+  }
+
+  .main-content {
+        width: 100%;
+        border-radius: 0;
+  }
+
+  .main-content .checklist  {
+        margin: 0;
+        border-radius: 0;
+  }
+
+  .navigation, .discord {
+    display: none;
+  }
+}
+
+
   </style>
 </head>
 
@@ -205,7 +248,7 @@
 
       <div class="checklist champion-suggestions">
 
-        <div class="d-flex justify-content-between  align-items-center">
+        <div class="d-flex justify-content-between  align-items-center top-section">
 
           <!-- <div style="width: 175px"></div> -->
 
@@ -246,7 +289,7 @@
 
         </div>
 
-          <div style="height: 80vh; overflow-y: scroll;flex-wrap: wrap; align-content: flex-start;" class="champions-list d-flex">
+          <div style=" overflow-y: scroll;flex-wrap: wrap; align-content: flex-start;" class="champions-list d-flex">
           </div>
 
 
@@ -260,7 +303,7 @@
 
 
 
-    <div class="challenge-sides">
+    <div class="challenge-sides right-side">
 
 
 
